added endpoint to create audio for a keyword
